feat(portofolio): fleshed out portofolio further

--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -20,7 +20,7 @@
               <h2>Gardener of code & plants: programming, 3d printing, Gardening, Aquaponics, & lots more</h2>
             </section>
             <section id="navigation" class='navigation'>
-              <a href="/pages/projects.html">projects</a> <a href="/pages/portofolio.html">portofolio</a> <a href="/pages/articles.html">articles</a> <a href="/pages/about.html">about</a>
+              <a href="/pages/portofolio.html">portofolio</a> <a href="/pages/articles.html">articles</a> <a href="/pages/about.html">about</a>
               <span>
                 <input type='text' placeholder='search' id='search' name='search' autocomplete='off'></input>
               </span>
@@ -37,7 +37,7 @@
           <section class="content grid-central">
             <div class='portofolio'>
     <h1 id="why-a-portofolioshowcase-">Why a portofolio/showcase ?</h1>
-<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl, quite visual projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.</p>
+<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl/CAD/3D printing etc, quite visual projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.</p>
 <h2 id="jam--usco">Jam / usco</h2>
 <p>A very modular, multi platform Webgl app for collaborative editing &amp; sharing of 3d designs for Ultimaker/Youmagine.com for 3D printing &amp; more</p>
 <p><img src="/assets/img/portofolio/jam/MoreMultiEdit.gif" alt="Jam" title="Jam"></p>
@@ -83,7 +83,9 @@ A project with a huge scope and possibilities</p>
 <li><p>I also created <a href="https://www.youtube.com/watch?v=nJyede1Ah9k&amp;list=PLCiWVcSJ1UJSghHdQcTsAaXOBDkX0Nmx9">Electron based experimental Desktop app</a></p>
 </li>
 </ul>
+<p><em><strong>Showcase:</strong></em></p>
 <p><img src="/assets/img/portofolio/jscad/Screenshot%20from%202021-03-01%2009-39-15.png" alt="jscad" title="Jscad"></p>
+<p><img src="/assets/img/portofolio/jscad/emitter-internal.png" alt="jscad" title="Jscad"></p>
 <ul>
 <li>Using the principle of &#39;dogfooding&#39; (actually use the software you are developing), I often used the software to create robots, pcb housings, gardening tools etc<h3 id="variations">Variations</h3>
 </li>
@@ -109,13 +111,19 @@ There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-i
   ***Key points:***
 
 <ul>
-<li>polymer.js / web component based</li>
-<li>hardware connection</li>
-<li>pleasant, easy to use user interface</li>
-<li>ported c bindings to enable use of native libraries for camera/hardware access</li>
+<li><p>polymer.js / web component based</p>
+</li>
+<li><p>hardware connection</p>
+</li>
+<li><p>pleasant, easy to use user interface</p>
+</li>
+<li><p>ported c bindings to enable use of native libraries for camera/hardware access</p>
+</li>
+<li><p><strong>Showcase:</strong>*</p>
+</li>
 </ul>
-<p><img src="/assets/img/portofolio/simple-scan/87544581-b6f2-4d7f-b41b-7143ad69033d.png" alt="scan" title="scan">
-<img src="/assets/img/portofolio/simple-scan/b659faff-af75-43b1-9d56-026ffc3e7846.png" alt="scan" title="scan"></p>
+<p>  <img src="/assets/img/portofolio/simple-scan/87544581-b6f2-4d7f-b41b-7143ad69033d.png" alt="scan" title="scan"></p>
+<p>  <img src="/assets/img/portofolio/simple-scan/b659faff-af75-43b1-9d56-026ffc3e7846.png" alt="scan" title="scan"></p>
 </details>
 
 <br>
@@ -123,25 +131,70 @@ There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-i
 
 <h2 id="3d-printing">3d printing</h2>
 <p>A long standing passion &amp; work of mine is 3d printing, in all its aspects: software, hardware, electronics, processes</p>
-<p><img src="/assets/img/portofolio/simple-scan/0ceca305-6b8d-4b69-8ee9-951658f5fff3.png" alt="scan" title="scan"></p>
+<p>  <img src="/assets/img/portofolio/3dp/video.gif" alt="3dp" title="3dp"></p>
 <details>
   <summary>Click to learn more!</summary>
 
-<p>  <em><strong>Key points:</strong></em></p>
+<p><em><strong>Key points:</strong></em></p>
+<ul>
+<li>design &amp; build of multiple 3D printers</li>
+<li>custom firmware development (C/C++/Arduino)</li>
+<li>front end / UI development in Python &amp; Js</li>
+<li>9 + years of experience both for 3d printing Companies (Ultimaker) &amp; personally</li>
+<li>3D printing workshop organization for adults &amp; children</li>
+</ul>
+<p><em><strong>Showcase:</strong></em></p>
+<p><img src="/assets/img/portofolio/3dp/3DR2%20-%201.jpg" alt="3dp" title="3dp"></p>
+<p><img src="/assets/img/portofolio/3dp/317.jpg" alt="3dp" title="3dp"></p>
+<p><img src="/assets/img/portofolio/3dp/320.jpg" alt="3dp" title="3dp"></p>
+<p><img src="/assets/img/portofolio/3dp/2014%20-%207.jpg" alt="3dp" title="3dp"></p>
+<p><img src="/assets/img/portofolio/3dp/2014%20-%208.jpg" alt="3dp" title="3dp"></p>
 </details>
 
 <br>
 
 
 <h2 id="electronics-robotics">Electronics/ Robotics</h2>
+<p>  A lot of my hardware projects also revolve around, or have included electronics/sensors actuators !</p>
+<p>  <img src="/assets/img/portofolio/robotics/kiwikee.jpg" alt="robotics" title="robotics"></p>
 <details>
   <summary>Click to learn more!</summary>
 
-<p>  <em><strong>Key points:</strong></em></p>
+<p><em><strong>Key points:</strong></em></p>
+<ul>
+<li><a href="https://github.com/PiRo-bots/kiwikee"> parametric versions</a> of 3D printable robots</li>
+<li>custom electronics, with home made PCB designs </li>
+<li>lots of experience with using off the shelf components for sensors, actuators, etc (Arduino, Esp8266, Raspberry Pi)</li>
+<li>coding custom firmware (c/c++/Arduino/PlatformIo) for robots, sensor networks (Mqtt...)</li>
+<li><a href="https://www.youtube.com/watch?v=o5OMGnLj5-I&amp;list=PLCiWVcSJ1UJRSipDN3YPTuBrR8wG8bjks">live coding video series</a> mixing Hardware/Firmware &amp; web dev</li>
+</ul>
+<p><em><strong>Showcase:</strong></em></p>
+<p>  <img src="/assets/img/portofolio/robotics/overview.png" alt="robotics" title="robotics"></p>
+<p>  <img src="/assets/img/portofolio/robotics/repBug_0.1.jpg" alt="robotics" title="robotics"></p>
+<p>  <img src="/assets/img/portofolio/robotics/robout-pcb.png" alt="robotics" title="robotics"></p>
 </details>
 
 <br>
 
+
+<h2 id="3d-visualization">3d visualization</h2>
+<p>In my carreer I have also been working on different types of data visualization in WebGL &amp; 2d</p>
+<p><img src="/assets/img/portofolio/dataviz/sensorGraphs.gif" alt="dataviz" title="dataviz"></p>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p><em><strong>Key points:</strong></em></p>
+<ul>
+<li>built specifically for client needs</li>
+<li>performant WebGL (GPU instancing etc)</li>
+<li>lean/ minimalistic implementations</li>
+</ul>
+<p><em><strong>Showcase:</strong></em></p>
+<p><img src="/assets/img/portofolio/dataviz/Screenshot%20from%202021-03-01%2011-13-42.png" alt="dataviz" title="dataviz"></p>
+<p><img src="/assets/img/portofolio/dataviz/Screenshot%20from%202021-03-01%2011-15-43.png" alt="dataviz" title="dataviz"></p>
+</details>
+
+<br>
 
 <h2 id="game-engine-tech-exploration">Game engine/ tech exploration</h2>
 <p>This personal project was a breeding ground to learn/ deepen my understanding about a lot of technologies, and how far you 
@@ -160,6 +213,8 @@ can push a &#39;tool-less&#39; web stack (no build steps, using native esmodules
 <li>python code for Blender add ons</li>
 </ul>
 </details>
+
+<br>
 
 
 
