chore(portofolio): a few more fixes

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -35,7 +35,7 @@
             </section>
           </header>
           <section class="content grid-central">
-            <div class='portofolio'>
+            <div class='portfolio'>
     <h1 id="why-a-portfolioshowcase-">Why a portfolio/showcase ?</h1>
 <p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl/CAD/3D printing etc, quite visual projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.</p>
 <h2 id="jam--usco">Jam / usco</h2>
