chore(portfolio): small tweaks

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -67,21 +67,12 @@ A project with a huge scope and possibilities</p>
 <p>  <em><strong>Key points:</strong></em></p>
 <p>Over the past (5+) years I was a core developer/maintainer of OpenJscad </p>
 <ul>
-<li><p>Upgrade to modern Es-next, development of core features &amp; UI of parametric 2D/3D modeling program (Javascript, Node.js)</p>
-</li>
-<li><p>development of core modeling &amp; maths features, UI</p>
-</li>
-<li><p>creation of a desktop app (Electron)</p>
-</li>
-<li><p>migration from monolithic code to node modules</p>
-</li>
-<li><p>setup and addition of a huge amount of unit test</p>
-</li>
-<li><p>I did a talk at HannoverJs a few years back that explains the scope and challenges of my work on the project
-<a href="https://www.youtube.com/watch?v=PLA8VPRRi6A">https://www.youtube.com/watch?v=PLA8VPRRi6A</a></p>
-</li>
-<li><p>I also created <a href="https://www.youtube.com/watch?v=nJyede1Ah9k&amp;list=PLCiWVcSJ1UJSghHdQcTsAaXOBDkX0Nmx9">Electron based experimental Desktop app</a></p>
-</li>
+<li>Upgrade to modern Es-next, development of core features &amp; UI of parametric 2D/3D modeling program (Javascript, Node.js)</li>
+<li>development of core modeling &amp; maths features, UI</li>
+<li>migration from monolithic code to node modules</li>
+<li>setup and addition of a huge amount of unit test</li>
+<li>I did <a href="https://www.youtube.com/watch?v=PLA8VPRRi6A">a talk</a> at HannoverJs a few years back that explains the scope and challenges of my work on the project</li>
+<li>I also created <a href="https://www.youtube.com/watch?v=nJyede1Ah9k&amp;list=PLCiWVcSJ1UJSghHdQcTsAaXOBDkX0Nmx9">Electron based experimental Desktop app</a></li>
 </ul>
 <p><em><strong>Showcase:</strong></em></p>
 <p><img src="/assets/img/portfolio/jscad/Screenshot%20from%202021-03-01%2009-39-15.png" alt="jscad" title="Jscad"></p>
@@ -103,7 +94,7 @@ There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-i
 <br>
 
 <h2 id="simple-scan">Simple-scan</h2>
-<p>A full blown 3d scanning app in the browser , with connected dedicated hardware !</p>
+<p>A full blown 3d scanning app in the browser , with connected dedicated hardware ! It was done for the KIT in Germany, Karslruhe</p>
 <p><img src="/assets/img/portfolio/simple-scan/0ceca305-6b8d-4b69-8ee9-951658f5fff3.png" alt="scan" title="scan"></p>
 <details>
   <summary>Click to learn more!</summary>
