feat(portfolio): a few additions & tweaks

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -73,6 +73,7 @@ A project with a huge scope and possibilities</p>
 <li>setup and addition of a huge amount of unit test</li>
 <li>I did <a href="https://www.youtube.com/watch?v=PLA8VPRRi6A">a talk</a> at HannoverJs a few years back that explains the scope and challenges of my work on the project</li>
 <li>I also created <a href="https://www.youtube.com/watch?v=nJyede1Ah9k&amp;list=PLCiWVcSJ1UJSghHdQcTsAaXOBDkX0Nmx9">Electron based experimental Desktop app</a></li>
+<li>latest versions also support decentralized design sharing using the <a href="https://dat.foundation/">dat protocol</a> / <a href="https://beakerbrowser.com/">beaker browser</a></li>
 </ul>
 <p><em><strong>Showcase:</strong></em></p>
 <p><img src="/assets/img/portfolio/jscad/Screenshot%20from%202021-03-01%2009-39-15.png" alt="jscad" title="Jscad"></p>
@@ -98,21 +99,15 @@ There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-i
 <p><img src="/assets/img/portfolio/simple-scan/0ceca305-6b8d-4b69-8ee9-951658f5fff3.png" alt="scan" title="scan"></p>
 <details>
   <summary>Click to learn more!</summary>
-  
-  ***Key points:***
 
+<p><em><strong>Key points:</strong></em></p>
 <ul>
-<li><p>polymer.js / web component based</p>
-</li>
-<li><p>hardware connection</p>
-</li>
-<li><p>pleasant, easy to use user interface</p>
-</li>
-<li><p>ported c bindings to enable use of native libraries for camera/hardware access</p>
-</li>
-<li><p><strong>Showcase:</strong>*</p>
-</li>
+<li>polymer.js / web component based</li>
+<li>hardware connection</li>
+<li>pleasant, easy to use user interface</li>
+<li>ported c bindings to enable use of native libraries for camera/hardware access</li>
 </ul>
+<p><em><strong>Showcase:</strong></em></p>
 <p>  <img src="/assets/img/portfolio/simple-scan/87544581-b6f2-4d7f-b41b-7143ad69033d.png" alt="scan" title="scan"></p>
 <p>  <img src="/assets/img/portfolio/simple-scan/b659faff-af75-43b1-9d56-026ffc3e7846.png" alt="scan" title="scan"></p>
 </details>
