--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -37,7 +37,7 @@
           <section class="content grid-central">
             <div class='portfolio'>
     <h1 id="why-a-portfolioshowcase-">Why a portfolio/showcase ?</h1>
-<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl/CAD/3D printing etc, quite visual projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.</p>
+<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl/CAD/3D printing etc, quite visual (very often web, based) projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.</p>
 <h2 id="jam--usco">Jam / usco</h2>
 <p>A very modular, multi platform Webgl app for collaborative editing &amp; sharing of 3d designs for Ultimaker/Youmagine.com for 3D printing &amp; more</p>
 <p><img src="/assets/img/portfolio/jam/MoreMultiEdit.gif" alt="Jam" title="Jam"></p>
