feat(): * barebones update for boilerplate * updated portofolion main & about pages, cvs etc * fixed old posts * various minor tweaks

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -27,7 +27,7 @@
               <a href='https://github.com/kaosat-dev' alt='github'  target="_blank" rel="noopener" class='icon' >
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 192 192" width="24px" height="24px"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"/><g fill="#000000"><path d="M87.2,16.8c-36.8,4 -66.4,33.6 -70.4,69.6c-4,37.6 17.6,71.2 50.4,84c2.4,0.8 4.8,-0.8 4.8,-4v-12.8c0,0 -3.2,0.8 -7.2,0.8c-11.2,0 -16,-9.6 -16.8,-15.2c-0.8,-3.2 -2.4,-5.6 -4.8,-8c-2.4,-0.8 -3.2,-0.8 -3.2,-1.6c0,-1.6 2.4,-1.6 3.2,-1.6c4.8,0 8.8,5.6 10.4,8c4,6.4 8.8,8 11.2,8c3.2,0 5.6,-0.8 7.2,-1.6c0.8,-5.6 3.2,-11.2 8,-14.4c-18.4,-4 -32,-14.4 -32,-32c0,-8.8 4,-17.6 9.6,-24c-0.8,-1.6 -1.6,-5.6 -1.6,-11.2c0,-3.2 0,-8 2.4,-12.8c0,0 11.2,0 22.4,10.4c4,-1.6 9.6,-2.4 15.2,-2.4c5.6,0 11.2,0.8 16,2.4c10.4,-10.4 22.4,-10.4 22.4,-10.4c1.6,4.8 1.6,9.6 1.6,12.8c0,6.4 -0.8,9.6 -1.6,11.2c5.6,6.4 9.6,14.4 9.6,24c0,17.6 -13.6,28 -32,32c4.8,4 8,11.2 8,18.4v20.8c0,2.4 2.4,4.8 5.6,4c29.6,-12 50.4,-40.8 50.4,-74.4c0,-48 -40.8,-85.6 -88.8,-80z"/></g></g></svg>
               </a>
-              <a href='mailto:contact@kaosat.net' alt='email' class='icon' >
+              <a href='mailto:moissette.mark@gmail.com' alt='email' class='icon' >
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px">
                   <path d="M 4 4 C 2.895 4 2 4.895 2 6 L 2 18 C 2 19.105 2.895 20 4 20 L 20 20 C 21.105 20 22 19.105 22 18 L 22 6 C 22 4.895 21.105 4 20 4 L 4 4 z M 5.5976562 6 L 18.402344 6 L 12 10 L 5.5976562 6 z M 5 8.6269531 L 12 13 L 19 8.6269531 L 19 18 L 5 18 L 5 8.6269531 z"/>
                 </svg>
@@ -37,7 +37,29 @@
           <section class="content grid-central">
             <div class='portfolio'>
     <h1 id="why-a-portfolioshowcase-">Why a portfolio/showcase ?</h1>
-<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl/CAD/3D printing etc, quite visual (very often web, based) projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.</p>
+<p>I have worked on a lot of projects in the past decade(s), on a lot of 3D/webgl/CAD/3D printing etc, quite visual (very often web, based) projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.
+This list only scratches the surface, would be too long to list, not to mention a few projects under NDA ;)</p>
+<ul>
+<li><p>3D modeling, scanning &amp; visualisation:</p>
+<ul>
+<li><a href="#jam--usco">Jam/usco</a></li>
+<li><a href="#openjscad-jscad">OpenJscad</a></li>
+<li><a href="#simple-scan">Simple-scan</a></li>
+</ul>
+</li>
+<li><p>3d Printing, electronics &amp; robotics</p>
+<ul>
+<li><a href="#3d-printing">3d printing</a></li>
+<li><a href="#electronics-robotics">robotics</a></li>
+</ul>
+</li>
+<li><p>Game developement &amp; Ecs:</p>
+<ul>
+<li><a href="#blenvy-bevy-engine--blender-integration">Blenvy: Blender + gltf + Bevy</a></li>
+<li><a href="#custom-game-engine-tech-exploration">Custom engine</a></li>
+</ul>
+</li>
+</ul>
 <h2 id="jam--usco">Jam / usco</h2>
 <p>A very modular, multi platform Webgl app for collaborative editing &amp; sharing of 3d designs for Ultimaker/Youmagine.com for 3D printing &amp; more</p>
 <p><img src="/assets/img/portfolio/jam/MoreMultiEdit.gif" alt="Jam" title="Jam"></p>
@@ -65,7 +87,7 @@ A project with a huge scope and possibilities</p>
   <summary>Click to learn more!</summary>
 
 <p>  <em><strong>Key points:</strong></em></p>
-<p>Over the past (5+) years I was a core developer/maintainer of OpenJscad </p>
+<p>For Over 5 years I was a core developer/maintainer of <a href="https://github.com/jscad/OpenJSCAD.org">OpenJscad</a> </p>
 <ul>
 <li>Upgrade to modern Es-next, development of core features &amp; UI of parametric 2D/3D modeling program (Javascript, Node.js)</li>
 <li>development of core modeling &amp; maths features, UI</li>
@@ -126,7 +148,7 @@ There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-i
 <li>design &amp; build of multiple 3D printers</li>
 <li>custom firmware development (C/C++/Arduino)</li>
 <li>front end / UI development in Python &amp; Js</li>
-<li>9 + years of experience both for 3d printing Companies (Ultimaker) &amp; personally</li>
+<li>10 + years of experience both for 3d printing Companies (Ultimaker) &amp; personally</li>
 <li>3D printing workshop organization for adults &amp; children</li>
 </ul>
 <p><em><strong>Showcase:</strong></em></p>
@@ -182,7 +204,35 @@ There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-i
 
 <br>
 
-<h2 id="game-engine-tech-exploration">Game engine/ tech exploration</h2>
+<h2 id="blenvy-bevy-engine--blender-integration">Blenvy: Bevy engine / Blender integration</h2>
+<p><img src="/assets/img/portfolio/Blenvy/blenvy.png" alt="gamedev" title="gamedev"></p>
+<p>I have created &amp; maintained <a href="https://github.com/kaosat-dev/Blenvy">Blenvy</a> a set of tools to enable <a href="https://www.blender.org/">Blender</a> to be used as an editor for the amazing <a href="https://bevyengine.org/">Bevy game engine</a>
+I love editor-less and code based approaches, but sometimes you need a good 3d modeling tool, and I use Blender regularly , so why not combine both ?
+It enables a <a href="https://www.blender.org/">Blender</a> (gltf) centric workflow for Bevy, ie defining entites &amp; their components
+inside Blender. Aka &quot;Blender as editor for Bevy&quot;</p>
+<p>It also allows you to setup &#39;blueprints&#39; in Blender by using collections etc.</p>
+<p>An (older) video explaining the basics can be found <a href="https://youtu.be/CgyNtwgYwdM">here</a></p>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p>  <em><strong>Key points:</strong></em></p>
+<ul>
+<li>Rust on the Bevy side, Python on the Blender side</li>
+<li>custom UI to add custom components with seamless integration into Bevy&#39;s ecs</li>
+<li>uses glf files with metadata to transfer information</li>
+<li>automated incremental exports with change detection on the Blender side</li>
+<li>hot reloading of assets to avoid recompilation of Rust code</li>
+<li>a LOT more tools</li>
+</ul>
+<p><em><strong>Showcase:</strong></em></p>
+<p><img src="/assets/img/portfolio/Blenvy/Blenvy1.png" alt="Blenvy" title="Blenvy"></p>
+<p><img src="/assets/img/portfolio/Blenvy/Blenvy2.png" alt="Blenvy" title="Blenvy"></p>
+<p><img src="/assets/img/portfolio/Blenvy/Blenvy3.png" alt="Blenvy" title="Blenvy"></p>
+</details>
+
+<br>
+
+<h2 id="custom-game-engine-tech-exploration">Custom Game engine/ tech exploration</h2>
 <p>This personal project was a breeding ground to learn/ deepen my understanding about a lot of technologies, and how far you 
 can push a &#39;tool-less&#39; web stack (no build steps, using native esmodules only as much as possible)</p>
 <p><img src="/assets/img/portfolio/gamedev/su-proto2.2.png" alt="gamedev" title="gamedev"></p>
