--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href='https://github.com/kaosat-dev' alt='github'  target="_blank" rel="noopener" class='icon' >
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 192 192" width="24px" height="24px"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"/><g fill="#000000"><path d="M87.2,16.8c-36.8,4 -66.4,33.6 -70.4,69.6c-4,37.6 17.6,71.2 50.4,84c2.4,0.8 4.8,-0.8 4.8,-4v-12.8c0,0 -3.2,0.8 -7.2,0.8c-11.2,0 -16,-9.6 -16.8,-15.2c-0.8,-3.2 -2.4,-5.6 -4.8,-8c-2.4,-0.8 -3.2,-0.8 -3.2,-1.6c0,-1.6 2.4,-1.6 3.2,-1.6c4.8,0 8.8,5.6 10.4,8c4,6.4 8.8,8 11.2,8c3.2,0 5.6,-0.8 7.2,-1.6c0.8,-5.6 3.2,-11.2 8,-14.4c-18.4,-4 -32,-14.4 -32,-32c0,-8.8 4,-17.6 9.6,-24c-0.8,-1.6 -1.6,-5.6 -1.6,-11.2c0,-3.2 0,-8 2.4,-12.8c0,0 11.2,0 22.4,10.4c4,-1.6 9.6,-2.4 15.2,-2.4c5.6,0 11.2,0.8 16,2.4c10.4,-10.4 22.4,-10.4 22.4,-10.4c1.6,4.8 1.6,9.6 1.6,12.8c0,6.4 -0.8,9.6 -1.6,11.2c5.6,6.4 9.6,14.4 9.6,24c0,17.6 -13.6,28 -32,32c4.8,4 8,11.2 8,18.4v20.8c0,2.4 2.4,4.8 5.6,4c29.6,-12 50.4,-40.8 50.4,-74.4c0,-48 -40.8,-85.6 -88.8,-80z"/></g></g></svg>
               </a>
-              <a href='mailto:contact@kaosat.net' alt='email' class='icon' >
+              <a href='mailto:moissette.mark@gmail.com' alt='email' class='icon' >
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px">
                   <path d="M 4 4 C 2.895 4 2 4.895 2 6 L 2 18 C 2 19.105 2.895 20 4 20 L 20 20 C 21.105 20 22 19.105 22 18 L 22 6 C 22 4.895 21.105 4 20 4 L 4 4 z M 5.5976562 6 L 18.402344 6 L 12 10 L 5.5976562 6 z M 5 8.6269531 L 12 13 L 19 8.6269531 L 19 18 L 5 18 L 5 8.6269531 z"/>
                 </svg>
@@ -40,14 +40,18 @@
       <p><img src="/assets/img/mememe.jpg" alt="peek-a-printer" title="peek-a-printer"></p>
 <p>Welcome !
 My name is Mark &amp; I am a gardener of code &amp; plants.</p>
-<p>Bullet points in bullet list (ah the wonders of technology)</p>
+<p>The short version: </p>
 <ul>
-<li>core dev of <a href="https://openjscad.org/">jscad</a></li>
-<li>mentor for kids at <a href="http://coderdojo-saar.de/">CoderDojo-saar</a></li>
+<li>3d modeling, 3d tooling &amp; 3d printing enthusiast </li>
+<li>proud creator of <a href="https://github.com/kaosat-dev/Blenvy">Blenvy</a> a Blender (gltf) centric workflow for Bevy, ie defining entites &amp; their components
+inside Blender. Aka &quot;Blender as editor for Bevy&quot;</li>
+<li>previous core dev of <a href="https://openjscad.org/">jscad</a> a js based (browser, node etc) parametric modeling tool</li>
+<li>occasional STEM mentor for kids at <a href="http://coderdojo-saar.de/">CoderDojo-saar</a></li>
+<li>open source enthusiast</li>
+<li>Multilingual: French (native), English (fluent), German (fluent), Hungarian, etc</li>
 <li>find me on <a href="https://github.com/kaosat-dev">github</a></li>
-<li>my <a href="/pages/resume-en.html">resume</a>  </li>
 </ul>
-<p>Curious for more ? check out my latest posts &amp; projects below or read up <a href="/pages/about">here</a></p>
+<p>Curious for more ? check out my <a href="/pages/portfolio">portofolio</a> or read up <a href="/pages/about">here</a></p>
 
     </div>
 
@@ -61,17 +65,17 @@ My name is Mark &amp; I am a gardener of code &amp; plants.</p>
         
     <li>
       <div class='item'>
-        <span class='date'>2018-11-26</span> <a href='/posts/undefined'>3d printed onion planting tool</a>
+        <span class='date'>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
       </div>
     </li>
     <li>
       <div class='item'>
-        <span class='date'>2018-11-26</span> <a href='/posts/undefined'>dynamic es-module creation part 1</a>
+        <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation-part-1'>dynamic es-module creation part 1</a>
       </div>
     </li>
     <li>
       <div class='item'>
-        <span class='date'>2018-08-26</span> <a href='/posts/undefined'>Mirabelle plums first harvest</a>
+        <span class='date'>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
       </div>
     </li>
     <li>
