feat(portofolio): added Blender section

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -45,6 +45,7 @@ This list only scratches the surface, would be too long to list, not to mention 
 <li><a href="#jam--usco">Jam/usco</a></li>
 <li><a href="#openjscad-jscad">OpenJscad</a></li>
 <li><a href="#simple-scan">Simple-scan</a></li>
+<li><a href="#blender">Blender</a></li>
 </ul>
 </li>
 <li><p>3d Printing, electronics &amp; robotics</p>
@@ -112,6 +113,26 @@ A project with a huge scope and possibilities</p>
 <h4 id="coffeescad">Coffeescad</h4>
 <p>I also worked on a fork in CoffeeScript for a while called ... Coffeescad !
 There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-im-browser-1305-99271.html">interview</a> I did about it for the German It/tech journal Golem </p>
+</details>
+
+<br>
+
+<h2 id="blender">Blender</h2>
+<p>I have been using Blender (&amp; more recently developing add-ons) ever since it became open-source !
+Using it for gamedev &amp; architecture purposes mostly.</p>
+<p><img src="/assets/img/portfolio/blender/blender3.png" alt="Blender" title="Blender"></p>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p><em><strong>Key points:</strong></em></p>
+<ul>
+<li>polygonal modeling, low poly, geometry nodes, arch-vis etc</li>
+<li>experiments with Blender as a gamedev tool with custom add-ons (see <a href="#blenvy-bevy-engine--blender-integration">here</a> and <a href="#custom-game-engine-tech-exploration">here</a>)</li>
+</ul>
+<p><em><strong>Showcase:</strong></em></p>
+<p>  <img src="/assets/img/portfolio/blender/blender2.png" alt="Blender" title="Blender"></p>
+<p>  <img src="/assets/img/portfolio/blender/blender1.png" alt="Blender" title="Blender"></p>
+<p>  <img src="/assets/img/portfolio/blender/blender4.png" alt="Blender" title="Blender"></p>
 </details>
 
 <br>
